Add TLS support to demo backend and update README with HTTPS instructions